[gd_scene load_steps=4 format=3 uid="uid://wfiqcpduj7t2"]

[ext_resource type="Script" path="res://level/enemy/enemies.gd" id="1_ohwyh"]
[ext_resource type="PackedScene" uid="uid://cggt0q3tajlt7" path="res://level/enemy/enemy_projectile.tscn" id="2_nngfh"]
[ext_resource type="Texture2D" uid="uid://0xognk2jpweo" path="res://icon.svg" id="2_rj5if"]

[node name="Enemies" type="Node2D"]
script = ExtResource("1_ohwyh")
attack_scene = ExtResource("2_nngfh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.8147e-06, -3.8147e-06)
scale = Vector2(0.171875, 0.171875)
texture = ExtResource("2_rj5if")

[node name="AttackTimer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
